--- a/Single layer + plot_weights.ipynb
+++ b/Single layer + plot_weights.ipynb
@@ -25,7 +25,7 @@
    },
    "outputs": [],
    "source": [
-    "dir = \"/Users/jifeihe/Desktop/Capstone/data\"\n",
+    "dir = \"/\"\n",
     "os.chdir(dir)"
    ]
   },
