Update Single layer + plot_weights.ipynb

--- a/Single layer + plot_weights.ipynb
+++ b/Single layer + plot_weights.ipynb
@@ -75,7 +75,7 @@
    ],
    "source": [
     "def get_data():\n",
-    "    dir = \"/Users/jifeihe/Desktop/Capstone/data\"\n",
+    "    dir = \"/\"\n",
     "    os.chdir(dir)\n",
     "    \n",
     "    X = np.loadtxt('train2928.txt')\n",
