--- a/vgg_entropy_80.ipynb
+++ b/vgg_entropy_80.ipynb
@@ -50,7 +50,7 @@
     }
    ],
    "source": [
-    "data_dir = '/Users/jifeihe/Desktop/Capstone/vgg_1000/VGGout_Known_NP_N'\n",
+    "data_dir = ''\n",
     "for file in os.listdir(data_dir):\n",
     "    if file.startswith(\"VGGout_C1\"): \n",
     "        print file"
